# cbr.ru-exchange-rates-rest-client-tests

./: .gitignore  README.md  pyproject.toml  rest_client_cbr.py
tests/: __init__.py  conftest.py  helper.py  test_get_exchange_rates.py
